--- a/index.html
+++ b/index.html
@@ -3,79 +3,129 @@
 <head>
   <meta charset="UTF-8" />
   <title>FlowStable – Coming Soon</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
   <style>
-    body {
+    * {
       margin: 0;
       padding: 0;
-      background: black;
+      box-sizing: border-box;
+      font-family: "Inter", sans-serif;
+    }
+
+    body {
+      background: #000;
       color: white;
-      font-family: 'Inter', sans-serif;
+      overflow: hidden;
+      height: 100vh;
       display: flex;
       justify-content: center;
       align-items: center;
-      height: 100vh;
       text-align: center;
     }
+
     .container {
-      max-width: 600px;
+      position: relative;
       padding: 20px;
+      max-width: 420px;
+      width: 100%;
+      z-index: 10;
     }
+
+    /* Neon gradient orb */
+    .bg-orb {
+      position: absolute;
+      width: 500px;
+      height: 500px;
+      background: radial-gradient(circle, rgba(0,119,255,0.45), transparent 60%);
+      top: -120px;
+      left: 50%;
+      transform: translateX(-50%);
+      filter: blur(80px);
+      animation: float 6s ease-in-out infinite alternate;
+    }
+
+    @keyframes float {
+      0% { transform: translateX(-50%) translateY(0); }
+      100% { transform: translateX(-50%) translateY(25px); }
+    }
+
+    /* White subtle glow lines */
+    .line {
+      position: absolute;
+      width: 100%;
+      height: 2px;
+      background: linear-gradient(to right, transparent, rgba(0,153,255,0.8), transparent);
+      top: 0;
+      animation: pulse 2s infinite ease-in-out;
+      opacity: 0.7;
+    }
+
+    @keyframes pulse {
+      0% { opacity: 0.1; }
+      50% { opacity: 0.6; }
+      100% { opacity: 0.1; }
+    }
+
+    /* Title */
     .title {
-      font-size: 50px;
-      font-weight: bold;
+      font-size: 3rem;
+      font-weight: 700;
+      letter-spacing: -1px;
     }
+
     .title span {
       color: #3b82f6;
     }
-    .badge {
-      margin-top: 20px;
-      padding: 12px 26px;
-      border: 1px solid #444;
-      border-radius: 30px;
-      display: inline-block;
-      color: #ccc;
-    }
-    .email {
-      margin-top: 40px;
-      padding: 12px;
-      width: 80%;
-      border-radius: 10px;
-      background: #111;
-      border: 1px solid #333;
-      color: white;
-    }
-    .btn {
+
+    /* Subtitle */
+    .subtitle {
       margin-top: 10px;
-      padding: 12px 20px;
-      width: 84%;
-      border-radius: 10px;
-      background: #3b82f6;
-      border: none;
-      color: white;
-      font-size: 16px;
-      cursor: pointer;
+      font-size: 1.1rem;
+      color: #9ca3af;
+      line-height: 1.5;
     }
-    .foot {
-      margin-top: 40px;
-      font-size: 13px;
-      color: #555;
+
+    /* Coming soon badge */
+    .badge {
+      margin-top: 28px;
+      padding: 10px 26px;
+      font-size: 0.95rem;
+      border: 1px solid rgba(255,255,255,0.08);
+      background: rgba(255,255,255,0.04);
+      backdrop-filter: blur(10px);
+      border-radius: 40px;
+      display: inline-block;
+      color: #d1d5db;
+      letter-spacing: 0.5px;
     }
+
+    /* Mobile scaling */
+    @media (max-width: 480px) {
+      .title { font-size: 2.4rem; }
+      .subtitle { font-size: 1rem; }
+    }
+
   </style>
 </head>
+
 <body>
+
+  <!-- Background elements -->
+  <div class="bg-orb"></div>
+  <div class="line"></div>
+
+  <!-- Main content -->
   <div class="container">
     <div class="title">Flow<span>Stable</span></div>
-    <p style="color:#999; margin-top:15px;">
-      The AI-powered DEX of the future.  
-      Rug-proof. Smart. Autonomous.
-    </p>
 
-    <div class="badge">Launching Soon</div>
+    <div class="subtitle">
+      AI-powered DEX. Rug-free trades.  
+      Autonomous on-chain intelligence.
+    </div>
 
-    <input class="email" type="email" placeholder="Enter email for early access" />
-    <button class="btn">Notify Me</button>
-
-    <div class="foot">FlowStable © 2025 • Powered by AI</div>
+    <div class="badge">Coming Soon</div>
   </div>
+
 </body>
 </html>
