Update subtitle for clarity and branding

--- a/index.html
+++ b/index.html
@@ -120,8 +120,7 @@
     <div class="title">Flow<span>Stable</span></div>
 
     <div class="subtitle">
-      AI-powered DEX. Rug-free trades.  
-      Autonomous on-chain intelligence.
+      AI-powered DEX on Stable.xyz
     </div>
 
     <div class="badge">Coming Soon</div>
